fixed notes not showing

--- a/styles.css
+++ b/styles.css
@@ -203,7 +203,6 @@ body.dark-mode .kanjiGroup {
     padding: 0 0.2em 0 0.2em;
     border-radius: 0.1em;
     background-color: var(--white);
-    margin-right: 0.2em;
 }
 
 
@@ -212,7 +211,7 @@ body.dark-mode .kanjiGroup {
     flex-direction: column;
     border: 2px solid black;
     padding: 0.5em;
-    width: 90vw;
+    width: 47.3em;
     transform: translateX(5%);
     gap: 1em;
     margin-top: -0.6em;
@@ -527,13 +526,14 @@ input[type="checkbox"]:checked::before {
     position: relative;
     display: inline-block;
     width: auto;
-    border: 2px solid deeppink;
+    border: 2px solid #ff1493;
     padding: 0.5em;
     margin: 0.5em;
 }
 
 .checkboxContainer label {
     margin-left: 0.2em;
+    user-select: none;
 }
 
 
@@ -562,9 +562,96 @@ input[type="checkbox"]:checked::before {
     width: 2.5em;
     aspect-ratio: 1/1;
     display: inline-block;
-    align-content: center;
     background-color: #04AA6D;
     border: 1px solid black;
     color: white;
     font-family: courier;
+    -webkit-user-select: none;
+    touch-action: manipulation;
+    cursor: pointer;
+    border-radius: 10px;
+    transition: color 100ms;
+    vertical-align: baseline;
+    user-select: none;
+    text-align: center;
+    text-decoration: none;
+    font-weight: bold;
+}
+
+.pagination button:hover,
+.pagination button:focus {
+    background-color: #ff1493;
+    color: #222222;
+    font-weight: bold;
+}
+
+
+
+.arrow-down {
+    width: 24px;
+    height: 16px;
+    position: relative;
+    left: 50%;
+    bottom: -1em;
+    -webkit-animation: arrow 0.5s 1s infinite ease-out alternate;
+}
+
+.arrow-down:hover {
+    -webkit-animation-play-state: paused;
+}
+
+.left {
+    position: absolute;
+    height: 4px;
+    width: 16px;
+    background: #ff1493;
+    -webkit-transform: rotate(240deg);
+    left: 10px;
+    bottom: -1em;
+    -webkit-border-radius: 4px;
+    -webkit-transform-origin: 2px 50%;
+    -webkit-animation: leftArrow 0.5s 1s infinite ease-out alternate;
+}
+
+.right {
+    position: absolute;
+    height: 4px;
+    width: 16px;
+    background: #ff1493;
+    -webkit-transform: rotate(-60deg);
+    left: 10px;
+    bottom: -1em;
+    -webkit-border-radius: 4px;
+    -webkit-transform-origin: 2px 50%;
+    -webkit-animation: rightArrow 0.5s 1s infinite ease-out alternate;
+}
+
+
+
+
+@-webkit-keyframes arrow {
+    0% {
+        bottom: 0px;
+    }
+
+    100% {
+        bottom: 16px;
+    }
+}
+
+
+@-webkit-keyframes leftArrow {
+    0% {}
+
+    100% {
+        -webkit-transform: rotate(225deg);
+    }
+}
+
+@-webkit-keyframes rightArrow {
+    0% {}
+
+    100% {
+        -webkit-transform: rotate(-45deg);
+    }
 }
